# pdf-querying-web-application

./: .env  README.md  User Manual to run pdf-querying system.docx  pyproject.toml  requirements.txt  ui.py
src/: ask.py  commands.py  config.py  db.py  main.py  read_filename.py  run_bot.py
templates/: index_bootstrap.html
