[tool.poetry]
name = "pdf-query"
version = "0.1.0"
description = ""
authors = ["Anuj Yadav"]
readme = "README.md"
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
python-dotenv = "^1.0.0"
chromadb = "^0.4.15"
openai = "^0.28.1"
langchain = "^0.1.1"
icecream = "^2.1.3"
pymupdf = "^1.23.5"
pypdf2 = "^3.0.1"
tiktoken = "^0.5.1"
slack-bolt = "^1.18.0"
streamlit = "^1.30.0"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
create-db = 'src.commands:create_db'
store-pdf = 'src.commands:store_pdf'
run-bot = 'src.commands:run'